--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <a class="skip-link" href="#conteudo">Pular para o conteúdo</a>
 
+  <!-- Topbar -->
   <header class="topbar" role="banner">
     <div class="container">
       <div class="brand" aria-label="Refeição Solidária">
@@ -36,6 +37,7 @@
     </div>
   </header>
 
+  <!-- Painel de acessibilidade -->
   <aside id="painelA11y" class="a11y-panel" aria-hidden="true">
     <div class="container">
       <h2 class="h4">Acessibilidade</h2>
@@ -50,7 +52,9 @@
     </div>
   </aside>
 
+  <!-- Conteúdo principal -->
   <main id="conteudo">
+    <!-- Hero -->
     <section id="hero" class="hero" aria-labelledby="ttlHero">
       <div class="container grid2">
         <div>
@@ -74,6 +78,7 @@
       </div>
     </section>
 
+    <!-- Doar -->
     <section id="doar" class="section" aria-labelledby="ttlDoar">
       <div class="container">
         <h2 id="ttlDoar">Sou estabelecimento — registrar doação</h2>
@@ -107,6 +112,7 @@
       </div>
     </section>
 
+    <!-- Buscar -->
     <section id="buscar" class="section" aria-labelledby="ttlBuscar">
       <div class="container">
         <h2 id="ttlBuscar">Sou ONG/beneficiário — encontrar doações</h2>
@@ -126,6 +132,7 @@
       </div>
     </section>
 
+    <!-- Chat -->
     <section id="chat" class="section" aria-labelledby="ttlChat">
       <div class="container">
         <h2 id="ttlChat">Chat simples doador ↔ receptor</h2>
@@ -153,6 +160,7 @@
       </div>
     </section>
 
+    <!-- Histórico -->
     <section id="historico" class="section" aria-labelledby="ttlHistorico">
       <div class="container">
         <h2 id="ttlHistorico">Histórico</h2>
@@ -169,6 +177,7 @@
       </div>
     </section>
 
+    <!-- Ranking -->
     <section id="ranking" class="section" aria-labelledby="ttlRanking">
       <div class="container">
         <h2 id="ttlRanking">Gamificação — ranking de empresas solidárias</h2>
@@ -177,6 +186,7 @@
       </div>
     </section>
 
+    <!-- Planos -->
     <section id="planos" class="section" aria-labelledby="ttlPlanos">
       <div class="container">
         <h2 id="ttlPlanos">Plano para estabelecimentos</h2>
@@ -212,6 +222,7 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="footer" role="contentinfo">
     <div class="container grid3">
       <div>
@@ -232,6 +243,7 @@
     </div>
   </footer>
 
+  <!-- Modal Solidário+ -->
   <div class="modal" id="modalCompra" role="dialog" aria-modal="true" aria-labelledby="ttlModal" aria-hidden="true">
     <div class="modal-content">
       <h3 id="ttlModal">Ativar Solidário+</h3>
