--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <!-- Topbar -->
   <header class="topbar" role="banner">
     <div class="container">
-      <div class="brand" aria-label="Refeição Solidária">
+      <div class="brand" aria-label="Nutrish">
         <span class="logo" aria-hidden="true">🍲</span>
-        <strong>Refeição Solidária</strong>
+        <strong>Nutrish</strong>
       </div>
       <nav class="nav" role="navigation" aria-label="Principal">
         <button class="nav-link" data-goto="#hero" id="btnInicio">Início</button>
@@ -227,7 +227,7 @@
   <footer class="footer" role="contentinfo">
     <div class="container grid3">
       <div>
-        <strong>Refeição Solidária</strong>
+        <strong>Nutrish</strong>
         <p class="muted">Reduzindo o desperdício, alimentando pessoas.</p>
       </div>
       <div>
