--- a/index.html
+++ b/index.html
@@ -123,8 +123,17 @@
           <span class="muted" id="locStatus" aria-live="polite"></span>
         </div>
         <div class="grid2">
-          <div class="map card" role="img" aria-label="Mapa ilustrativo de doações">
-            <canvas id="miniMapa" width="500" height="320" aria-hidden="true"></canvas>
+          <!-- mapa real no lugar do canvas -->
+          <div class="map card" role="region" aria-label="Mapa de doações na região">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.925453440158!2d-46.63330958496702!3d-23.55051968468783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a3c0b4b5ad%3A0x7e80d3f0e0c3b3d2!2sPra%C3%A7a%20da%20S%C3%A9%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1696265862342!5m2!1spt-BR!2sbr" 
+              width="100%" 
+              height="320" 
+              style="border:0; border-radius: 16px; box-shadow: var(--shadow);" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
           <div>
             <ul id="listaDoacoes" class="list" aria-label="Lista de doações disponíveis"></ul>
@@ -261,4 +270,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
