--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
         <span class="logo" aria-hidden="true">🍲</span>
         <strong>Nutrish</strong>
       </div>
+      <!-- Navegação corrigida -->
       <nav class="nav" role="navigation" aria-label="Principal">
-        <button class="nav-link" data-goto="#hero" id="btnInicio">Início</button>
-        <button class="nav-link" data-goto="#doar">Doar</button>
-        <button class="nav-link" data-goto="#buscar">Buscar</button>
-        <button class="nav-link" data-goto="#chat">Chat</button>
-        <button class="nav-link" data-goto="#ranking">Ranking</button>
-        <button class="nav-link" data-goto="#planos">Planos</button>
+        <button class="nav-link btn" data-goto="#hero" id="btnInicio">Início</button>
+        <button class="nav-link btn" data-goto="#doar">Doar</button>
+        <button class="nav-link btn" data-goto="#buscar">Buscar</button>
+        <button class="nav-link btn" data-goto="#chat">Chat</button>
+        <button class="nav-link btn" data-goto="#ranking">Ranking</button>
+        <button class="nav-link btn" data-goto="#planos">Planos</button>
       </nav>
       <div class="actions">
         <div class="a11y-group" role="group" aria-label="Acessibilidade">
@@ -37,7 +38,7 @@
     </div>
   </header>
 
-  <!-- Painel de acessibilidade atualizado -->
+  <!-- Painel de acessibilidade -->
   <aside id="painelA11y" class="a11y-panel" aria-hidden="true">
     <div class="container">
       <h2 class="h4">Acessibilidade</h2>
@@ -123,7 +124,6 @@
           <span class="muted" id="locStatus" aria-live="polite"></span>
         </div>
         <div class="grid2">
-          <!-- mapa real no lugar do canvas -->
           <div class="map card" role="region" aria-label="Mapa de doações na região">
             <iframe 
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.925453440158!2d-46.63330958496702!3d-23.55051968468783!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a3c0b4b5ad%3A0x7e80d3f0e0c3b3d2!2sPra%C3%A7a%20da%20S%C3%A9%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1696265862342!5m2!1spt-BR!2sbr" 
