--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
         <span class="logo" aria-hidden="true">🍲</span>
         <strong>Nutrish</strong>
       </div>
-      <!-- Navegação corrigida -->
       <nav class="nav" role="navigation" aria-label="Principal">
-        <button class="nav-link btn" data-goto="#hero" id="btnInicio">Início</button>
-        <button class="nav-link btn" data-goto="#doar">Doar</button>
-        <button class="nav-link btn" data-goto="#buscar">Buscar</button>
-        <button class="nav-link btn" data-goto="#chat">Chat</button>
-        <button class="nav-link btn" data-goto="#ranking">Ranking</button>
-        <button class="nav-link btn" data-goto="#planos">Planos</button>
+        <button class="nav-link" data-goto="#hero" id="btnInicio">Início</button>
+        <button class="nav-link" data-goto="#doar">Doar</button>
+        <button class="nav-link" data-goto="#buscar">Buscar</button>
+        <button class="nav-link" data-goto="#chat">Chat</button>
+        <button class="nav-link" data-goto="#ranking">Ranking</button>
+        <button class="nav-link" data-goto="#planos">Planos</button>
       </nav>
       <div class="actions">
         <div class="a11y-group" role="group" aria-label="Acessibilidade">
@@ -60,7 +59,7 @@
     <section id="hero" class="hero" aria-labelledby="ttlHero">
       <div class="container grid2">
         <div>
-          <h1 id="ttlHero">Conecte doações de alimentos a quem mais precisa</h1>
+          <h1 id="ttlHero" class="title-hero">Conecte doações de alimentos a quem mais precisa</h1>
           <p class="lead">Negócios evitam desperdício, pessoas e ONGs recebem refeições. Tudo em tempo real.</p>
           <div class="cta">
             <a class="btn primary" href="#doar">Quero Doar</a>
@@ -232,6 +231,7 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="footer" role="contentinfo">
     <div class="container grid3">
       <div>
